// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List renders correctly when fetching has not started 1`] = `
Array [
  .c0 {
  height: 35rem;
  margin-bottom: 1.5rem;
}

@media (min-width:62em) {
  .c0 {
    height: 9rem;
  }
}

<div
    class="c0"
  />,
  .c0 {
  height: 35rem;
  margin-bottom: 1.5rem;
}

@media (min-width:62em) {
  .c0 {
    height: 9rem;
  }
}

<div
    class="c0"
  />,
  .c0 {
  height: 35rem;
  margin-bottom: 1.5rem;
}

@media (min-width:62em) {
  .c0 {
    height: 9rem;
  }
}

<div
    class="c0"
  />,
]
`;

exports[`List renders correctly with an error 1`] = `
.c0 {
  background-color: #ff9800;
  color: #fff;
  padding: 1rem;
}

<div
  class="c0"
>
  We had problems retrieving products for you, retry or come back later.
</div>
`;

exports[`List renders correctly with no products 1`] = `
.c0 {
  margin: 2rem auto;
  padding: 2rem;
}

<div
  class="c0"
>
  <p>
    There are no product matching your requirements.
  </p>
</div>
`;

exports[`List renders correctly with products 1`] = `
<_default>
  <Product
    brand="Landbay"
    columns={
      Array [
        Object {
          "label": "Max LTV",
          "value": "85%",
        },
        Object {
          "label": "Initial Rate",
          "value": "1.49%",
        },
        Object {
          "label": "Subsequent Rate",
          "value": "2.75%",
        },
        Object {
          "label": "Fees",
          "value": "£1,495",
        },
      ]
    }
    description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean bibendum facilisis condimentum. Donec laoreet porttitor condimentum. Nulla luctus efficitur magna, eget rhoncus metus placerat sed."
    detailed={
      Object {
        "Highlight Points": Array [
          Object {
            "label": "Max LTV",
            "value": "85%",
          },
          Object {
            "label": "Initial Rate",
            "value": "1.49%",
          },
          Object {
            "label": "Subsequent Rate",
            "value": "2.75%",
          },
          Object {
            "label": "Fees",
            "value": "£1,495",
          },
        ],
        "Point List": Array [
          Object {
            "label": "",
            "value": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
          },
        ],
        "Technical Points": Array [
          Object {
            "label": "Max LTV",
            "value": "85%",
          },
          Object {
            "label": "Initial Rate",
            "value": "1.49%",
          },
          Object {
            "label": "Subsequent Rate",
            "value": "2.75%",
          },
          Object {
            "label": "Fees",
            "value": "£1,495",
          },
        ],
      }
    }
    disclaimer="Application for this product will impact your credit score."
    feature_point="Awarded best broker 2019"
    highlighted={true}
    key="0"
    labels={
      Array [
        "broker only",
        "consumer favourite",
      ]
    }
    links={
      Object {
        "apply": "https://b2bfinance.com/enquire/buy-to-let",
        "logo": "https://b2bfinance.com/images/partners/Landbay.png",
      }
    }
    meta={
      Object {
        "confirm": Object {
          "description": "B2Bfinance.com are registered intermediaries who will quote, package and submit your lending request to Natwest. There is no charge for this service as we are paid a small commission by Natwest to cover our time.",
          "heading": "Application via Brokers only",
        },
      }
    }
    title="Landbay - Buy To Let Wizards"
  />
</_default>
`;
